修改了登录的a链接跳转

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="cont-right">
                 <div class="login">
                     <div class="hpo"></div>
-                    <div class="tip">Hi~<a href="">登录</a>发现更多精彩</div>
+                    <div class="tip">Hi~<a href="login.html">登录</a>发现更多精彩</div>
                     <div class="btn">
                         <input type="submit" value="登录"><br>
                         <a href="login.html" target="_blank"><input type="submit" value="注册"></a>
