--- a/index.html
+++ b/index.html
@@ -110,8 +110,6 @@
                         <img src="images/1.png" alt="广告一" />
                     </a> -->
                 </ul>
-                <div class="left">&lt;</div>
-                <div class="right">&gt;</div>
                 <div class="dots">
                     <ul>
                         <!-- <li></li> -->
@@ -131,7 +129,7 @@
             <div class="cont-right">
                 <div class="login">
                     <div class="hpo"></div>
-                    <div class="tip">Hi~<a href="login.html">登录</a>发现更多精彩</div>
+                    <div class="tip">Hi~<a href="">登录</a>发现更多精彩</div>
                     <div class="btn">
                         <input type="submit" value="登录"><br>
                         <a href="login.html" target="_blank"><input type="submit" value="注册"></a>
